--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,8 @@ html{
 body{
     background-color: #eaeaea;
     height: 100%;
+    /*隐藏水平方向滚动条*/
+    overflow-x:hidden
 }
 
 /*导航栏-起始位置为左侧*/
@@ -31,6 +33,7 @@ body{
     top:0;
     /*添加右侧阴影*/
     /*opacity: 0;*/
+    z-index: 1000;
 }
 .navi .navi_top{
     width: 100%;
@@ -55,6 +58,8 @@ body{
     height: 90%;
     padding-top: 90px;
     box-sizing: border-box;
+    /*>>>>>>>>>>>>>>>>>>>*/
+    pointer-events:none;
 }
 .navi .navi_bottom .name{
     font-size: 27px;
@@ -86,9 +91,14 @@ body{
 .navi .navi_bottom .moreFunc{
     margin-top: 50px;
 }
-.navi .navi_bottom .moreFunc>button{
+.navi .navi_bottom .moreFunc>a{
     font-size: 13px;
     cursor: pointer;
+    color: #696969;
+    pointer-events: auto;
+}
+.navi .navi_bottom .moreFunc>a:hover{
+    color: burlywood;
 }
 .navi .navi_bottom .friendsLink{
     margin-top: 25px;
@@ -105,19 +115,64 @@ body{
     background-color: antiquewhite;
     height: 100%;
     width: 100%;
-    /*position: absolute;*/
+    position: absolute;
     /*right: 30px;*/
     /*top: 30px;*/
     /*left: 30px;*/
-    margin-left: 300px;
+    /*margin-left: 300px;*/
     /*position: relative;*/
     /*float: left;*/
+    transition: all 0.5s ease-in-out 0s;
+    background-image: url("../images/bg1.jpg");
+    background-size: 0px;
 }
+/*内容模块-左侧目录*/
 .content .catalogue{
-    background-color: red;
-    width: 360px;
+    /*background-color: red;*/
+    width: 330px; /*360*/
     height: 100%;
-    /*position: absolute;*/
-    /*left: 0;*/
-    /*top:0;*/
+    position: absolute;
+    left: 0;
+    top:0;
 }
+.content .catalogue .introduction{
+    /*background-color: #929292;*/
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    /*height: 100%;*/
+    /*line-height: 100%;*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.content .catalogue .introduction>li{
+    margin-bottom: 10px;
+}
+.content .catalogue .introduction>li:first-child{
+    font-size: 22px;
+}
+/*内容模块-右侧内容-文章模块*/
+.content .content_articles{
+    margin-left: 330px;
+    margin-right: 30px;
+    height: 100%;
+    margin-top: 30px;
+}
+.content .content_articles>li{
+    background-color: white;
+    width: 100%;
+    height: 500px;
+    position: relative;
+    margin-bottom: 30px;
+}
+.content .content_articles>li>.leftLine{
+    background-color: black;
+    width: 5px;
+    height: 80px;
+    position: absolute;
+    left: 0;
+    top:0;
+}
+/*内容模块-右侧内容-相册模块*/
