--- a/css/index.css
+++ b/css/index.css
@@ -182,12 +182,11 @@ body{
 /*每个文章*/
 .content .content_articles>li{
     background-color: white;
-    width: 100%;
+    /*width: 100%;*/
     height: 750px;
     position: relative;
     margin-top: 30px;
     padding: 30px 60px 0px 60px;
-    box-sizing: border-box;
     font-size: 22px;
     overflow: hidden;
 }
