添加文章查看更多按钮

--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,8 @@ body{
     overflow-x:hidden
 }
 
+/*屏幕适配*/
+
 /*导航栏-起始位置为左侧*/
 .navi{
     width: 300px;
@@ -52,6 +54,11 @@ body{
     bottom: -62px;
     left: 50%;
     margin-left: -65px;
+    transition-duration: 0.5s;
+    transition-property: transform;
+}
+.navi .navi_top .icon img:hover{
+    transform: scale(2,2) rotate(90deg);
 }
 .navi .navi_bottom{
     background-color: #ffffff;
@@ -117,7 +124,6 @@ body{
 }
 .navi .navi_bottom .friendsLink{
     margin-top: 25px;
-    /*box-sizing: border-box;*/
 }
 .navi .navi_bottom .friendsLink>a{
     pointer-events: auto;
@@ -127,27 +133,22 @@ body{
     height: 32px;
     margin: 5px;
 }
+.navi .navi_bottom .friendsLink>a>img:hover{
+    transform: scale(1.2,1.2);
+}
 
 /*内容模块布局*/
 .content{
-    /*background-color: antiquewhite;*/
     height: 100%;
     width: 100%;
     position: absolute;
-    /*right: 30px;*/
-    /*top: 30px;*/
-    /*left: 30px;*/
-    /*margin-left: 300px;*/
-    /*position: relative;*/
-    /*float: left;*/
+    background-size: 0;
     transition: transform 0.5s ease-in-out 0s,backgroundSize 0.5s ease-in-out 1.5s;
     background-image: url("../images/bg1.jpg");
-    background-size: 0px;
     overflow-y:hidden;
 }
 /*内容模块-左侧目录*/
 .content .catalogue{
-    /*background-color: red;*/
     width: 330px; /*360*/
     height: 100%;
     position: absolute;
@@ -155,12 +156,9 @@ body{
     top:0;
 }
 .content .catalogue .introduction{
-    /*background-color: #929292;*/
     text-align: center;
     margin: 0 auto;
     color: white;
-    /*height: 100%;*/
-    /*line-height: 100%;*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -174,22 +172,23 @@ body{
 }
 /*内容模块-右侧内容-文章模块*/
 .content .content_articles{
-    margin-left: 330px;
+    margin-left: 300px;//330
     margin-right: 30px;
     height: 100%;
-    /*margin-top: 30px;*/
     overflow-y:auto;
+    overflow-x: hidden;
 }
 /*每个文章*/
 .content .content_articles>li{
     background-color: white;
-    /*width: 100%;*/
     height: 750px;
     position: relative;
     margin-top: 30px;
     padding: 30px 60px 0px 60px;
     font-size: 22px;
     overflow: hidden;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .content .content_articles>li:last-child{
     margin-bottom: 30px;
@@ -223,21 +222,17 @@ body{
     width: 100%;
     border-top: 1px solid #cccccc;
     height: 80px;
-    /*background-color: aquamarine;*/
     position: relative;
 }
 /*内容-文章-底部模块*/
 .content .content_articles>li>.art_foot>.art_tag{
-    /*background-color: red;*/
     width: 70%;
     height: 100%;
-    /*float: left;*/
     position: absolute;
     top:0;
     left: 0;
 }
 .content .content_articles>li>.art_foot>.art_fullTextBtn{
-    /*float: right;*/
     background-color: #4d4d4d;
     width: 80px;
     height: 25px;
