--- a/css/index.css
+++ b/css/index.css
@@ -188,74 +188,74 @@ body{
     overflow-x: hidden;
 }
 /*每个文章*/
-.content .content_articles>li{
-    background-color: white;
-    height: 750px;
-    position: relative;
-    margin-top: 30px;
-    padding: 30px 60px 0px 60px;
-    font-size: 22px;
-    overflow: hidden;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-.content .content_articles>li:last-child{
-    margin-bottom: 30px;
-}
-.content .content_articles>li>.leftLine{
-    background-color: black;
-    width: 5px;
-    height: 80px;
-    position: absolute;
-    left: 0;
-    top:0;
-}
-.content .content_articles>li>div{
-    color: #69697f;
-    font-size: 17px;
-    margin-bottom: 30px;
-}
-.content .content_articles>li>.art_title{
-    width: 100%;
-    height: 50px;
-}
-.content .content_articles>li>.art_picture{
-    width: 400px;
-    height: 250px;
-}
-.content .content_articles>li>.art_mainText{
-    width: 100%;
-    height: 250px;
-}
-.content .content_articles>li>.art_foot{
-    width: 100%;
-    border-top: 1px solid #cccccc;
-    height: 80px;
-    position: relative;
-}
-/*内容-文章-底部模块*/
-.content .content_articles>li>.art_foot>.art_tag{
-    width: 70%;
-    height: 100%;
-    position: absolute;
-    top:0;
-    left: 0;
-}
-.content .content_articles>li>.art_foot>.art_fullTextBtn{
-    background-color: #4d4d4d;
-    width: 80px;
-    height: 25px;
-    line-height: 25px;
-    color: white;
-    font-size: 13px;
-    display: block;
-    text-align: center;
-    position: absolute;
-    top:50%;
-    right:0;
-    transform: translateY(-50%);
-    border-radius: 3px;
-}
+/*.content .content_articles>li{*/
+    /*background-color: white;*/
+    /*height: 750px;*/
+    /*position: relative;*/
+    /*margin-top: 30px;*/
+    /*padding: 30px 60px 0px 60px;*/
+    /*font-size: 22px;*/
+    /*overflow: hidden;*/
+    /*margin-left: 30px;*/
+    /*margin-right: 30px;*/
+/*}*/
+/*.content .content_articles>li:last-child{*/
+    /*margin-bottom: 30px;*/
+/*}*/
+/*.content .content_articles>li>.leftLine{*/
+    /*background-color: black;*/
+    /*width: 5px;*/
+    /*height: 80px;*/
+    /*position: absolute;*/
+    /*left: 0;*/
+    /*top:0;*/
+/*}*/
+/*.content .content_articles>li>div{*/
+    /*color: #69697f;*/
+    /*font-size: 17px;*/
+    /*margin-bottom: 30px;*/
+/*}*/
+/*.content .content_articles>li>.art_title{*/
+    /*width: 100%;*/
+    /*height: 50px;*/
+/*}*/
+/*.content .content_articles>li>.art_picture{*/
+    /*width: 400px;*/
+    /*height: 250px;*/
+/*}*/
+/*.content .content_articles>li>.art_mainText{*/
+    /*width: 100%;*/
+    /*height: 250px;*/
+/*}*/
+/*.content .content_articles>li>.art_foot{*/
+    /*width: 100%;*/
+    /*border-top: 1px solid #cccccc;*/
+    /*height: 80px;*/
+    /*position: relative;*/
+/*}*/
+/*!*内容-文章-底部模块*!*/
+/*.content .content_articles>li>.art_foot>.art_tag{*/
+    /*width: 70%;*/
+    /*height: 100%;*/
+    /*position: absolute;*/
+    /*top:0;*/
+    /*left: 0;*/
+/*}*/
+/*.content .content_articles>li>.art_foot>.art_fullTextBtn{*/
+    /*background-color: #4d4d4d;*/
+    /*width: 80px;*/
+    /*height: 25px;*/
+    /*line-height: 25px;*/
+    /*color: white;*/
+    /*font-size: 13px;*/
+    /*display: block;*/
+    /*text-align: center;*/
+    /*position: absolute;*/
+    /*top:50%;*/
+    /*right:0;*/
+    /*transform: translateY(-50%);*/
+    /*border-radius: 3px;*/
+/*}*/
 /*内容模块-右侧内容-相册模块*/
 
 
@@ -324,17 +324,19 @@ body{
     .tools{
         /*z-index: 1000;*/
         background-color: #b6cbc6;
+        /*transform: none;*/
         /*transform: translateX(-300px);*/
         float: none;
         position: absolute;
-        left: -600px;
+        left: -300px;
         top:0;
     }
     .content{
         width: 100%;
         position: absolute;
-        top:330px;
+        top:300px;
         left: -300px;
+        /*transform: none;*/
         /*transform: translateX(-300px);*/
         height: 7900px;
     }
