--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,7 @@ body{
     left: 0;
     top:0;
     z-index: 1000;
-    transition: all 0.5s ease-in-out 0s;
+    transition: transform 0.5s ease-in-out 0s;
 }
 .navi .navi_top{
     width: 100%;
@@ -389,7 +389,7 @@ body{
         left: -300px;
         /*transform: none;*/
         /*transform: translateX(-300px);*/
-        height: 7900px;
+        height: 5500px;
     }
     .content .content_articles{
     }
