--- a/css/index.css
+++ b/css/index.css
@@ -314,16 +314,17 @@ body{
     height: 100%;
     overflow-y: auto;
     display: none;
+    overflow-x: hidden;
     /*margin-left: 30px;*/
     /*margin-right: 30px;*/
+    padding-top: 30px;
 }
-.content .content_ablum .content_ablum_navi{
+.content .content_ablum>li{
     background-color:white;
     color: #4d4d4d;
-    height: 100%;
+    /*height: 100%;*/
     margin-left: 30px;
     margin-right: 30px;
-    margin-top: 30px;
     padding-left: 40px;
     padding-top: 30px;
     position: relative;
@@ -370,18 +371,27 @@ body{
 /*照片部分，li*/
 .content .content_ablum .photo_li{
     background-color: white;
+    /*width: 150px;*/
+    /*height: 150px;*/
+}
+.content .content_ablum .photo_li figure{
+    background-color: red;
+    display: inline-block;
+    /*float: left;*/
     width: 150px;
     height: 150px;
+    /*margin-left: 0px;*/
+    /*margin-right: 0px;*/
+    margin: 0;
 }
 .content .content_ablum .photo_li img{
     width: 150px;
     height: 150px;
     margin-bottom: 30px;
 }
-.content .content_ablum .uyan_frame{
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 60px;
+.content .content_ablum .photo_li p{
+    font-size: 22px;
+    margin-bottom: 10px;
 }
 
 /*内容模块底部工具栏*/
@@ -569,5 +579,14 @@ body{
         height: 5500px;
     }
     .content .content_articles{
+    }
+    .content .content_ablum>li{
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 10px;
+        padding-top: 10px;
+    }
+    .content .content_ablum .content_ablum_navi .ablum_lfet_line{
+        display: none;
     }
 }
