--- a/css/index.css
+++ b/css/index.css
@@ -318,6 +318,7 @@ body{
     /*margin-left: 30px;*/
     /*margin-right: 30px;*/
     padding-top: 30px;
+    box-sizing: border-box;
 }
 .content .content_ablum>li{
     background-color:white;
@@ -383,6 +384,7 @@ body{
     /*margin-left: 0px;*/
     /*margin-right: 0px;*/
     margin: 0;
+    cursor: pointer;
 }
 .content .content_ablum .photo_li img{
     width: 150px;
@@ -422,6 +424,69 @@ body{
     background-color: #eaeaea;
     width: 100%;
     /*height: 150px;*/
+}
+
+/*>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+/*图片浏览器*/
+.photoBrowser{
+    background-color: black;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: 1200;
+    position: fixed;
+    top:0;
+    left:0;
+}
+/*暂时不做这个功能*/
+.photoBrowser .pb_index{
+    /*display: none;*/
+}
+.photoBrowser .pb_fullWindowBtn{
+    background: url("../images/default-skin.png") no-repeat center top;
+    background-position: 13px 15px;
+    width: 18px;
+    height: 14px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    /*退出全屏*/
+    /*background-position: 57px 15px;*/
+    /*width: 18px;*/
+    /*height: 14px;*/
+}
+.photoBrowser .pb_closeBtn{
+    background: url("../images/default-skin.png") no-repeat center top;
+    background-position: 15px 59px;
+    width: 14px;
+    height: 14px;
+}
+.photoBrowser .pb_prebtn{
+    background: url("../images/default-skin.png") no-repeat center top;
+    background-position: 147px 53px;
+    width: 14px;
+    height: 12px;
+}
+.photoBrowser .pb_nextBtn{
+    background: url("../images/default-skin.png") no-repeat center top;
+    background-position: 103px 53px;
+    width: 14px;
+    height: 12px;
+}
+.photoBrowser .pb_magnifier{
+    background: url("../images/default-skin.png") no-repeat center top;
+    background-position: 102px 15px;
+    width: 15px;
+    height: 15px;
+    /*放小*/
+    /*background-position: 146px 15px;*/
+    /*width: 15px;*/
+    /*height: 15px;*/
+    /*返回的图标*/
+    /*background-position: 58px 60px;*/
+    /*width: 16px;*/
+    /*height: 13px;*/
 }
 
 /*每个文章*/
