--- a/css/index.css
+++ b/css/index.css
@@ -433,7 +433,7 @@ body{
     opacity: 1;
     width: 100%;
     height: 100%;
-    display: block;
+    display: none;
     z-index: 1200;
     position: fixed;
     top:0;
@@ -443,14 +443,18 @@ body{
 .photoBrowser .pb_index{
     /*display: none;*/
 }
+.photoBrowser div{
+    cursor: pointer;
+}
 .photoBrowser .pb_fullWindowBtn{
     background: url("../images/default-skin.png") no-repeat center top;
     background-position: 13px 15px;
-    width: 18px;
-    height: 14px;
+    width: 50px;
+    height: 50px;
+    /*18 14*/
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 170px;
     /*退出全屏*/
     /*background-position: 57px 15px;*/
     /*width: 18px;*/
@@ -459,8 +463,12 @@ body{
 .photoBrowser .pb_closeBtn{
     background: url("../images/default-skin.png") no-repeat center top;
     background-position: 15px 59px;
-    width: 14px;
-    height: 14px;
+    width: 50px;
+    height: 50px;
+    /*14 14*/
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 .photoBrowser .pb_prebtn{
     background: url("../images/default-skin.png") no-repeat center top;
