--- a/css/index.css
+++ b/css/index.css
@@ -271,26 +271,31 @@ body{
 }
 /*工具栏中<=790px时显示的选择条（所有文章/关于我）*/
 .tools .tools_selectBar{
-    background-color: transparent;
+    background-color: red;
     width: 210px;
     height: 25px;
     color: white;
-    /*position: fixed;*/
-    /*left: 50%;*/
-    /*top:50px;*/
-    /*transform: translateX(-50%);*/
+    position: absolute;
+    left: 50%;
+    top:50px;
+    transform: translateX(-50%);
     display: none;
     margin: 0 auto;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     border: 1px solid white;
     border-radius: 3px;
+    font-size: 13px;
 }
 .tools .tools_selectbar a{
-    display: inline-block;
-    background-color: red;
+    /*display: inline-block;*/
+    background-color: green;
     width: 105px;
     height: 25px;
+    /*float: right;*/
+
 }
+
+
 /*内容模块布局*/
 .content{
     height: 100%;
@@ -325,7 +330,8 @@ body{
     /*height: 100%;*/
     margin-left: 30px;
     margin-right: 30px;
-    padding-left: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 30px;
     position: relative;
 }
@@ -371,28 +377,32 @@ body{
 /*照片部分，li*/
 .content .content_ablum .photo_li{
     background-color: white;
-    /*width: 150px;*/
-    /*height: 150px;*/
-}
-.content .content_ablum .photo_li figure{
-    background-color: red;
-    display: inline-block;
-    /*float: left;*/
-    width: 150px;
-    height: 150px;
-    /*width: 25%;*/
-    /*height:0;*/
-    margin: 0;
-    cursor: pointer;
-}
-.content .content_ablum .photo_li img{
-    width: 100%;
-    height: 100%;
-    margin-bottom: 30px;
 }
 .content .content_ablum .photo_li p{
     font-size: 22px;
     margin-bottom: 10px;
+}
+.content .content_ablum .photo_li figure{
+    background-color: red;
+    /*display: inline-block;*/
+    width: 100px;
+    height: 100px;
+    margin: 0;
+    cursor: pointer;
+    display: none;
+}
+.content .content_ablum .photo_li figure:hover{
+    transform: scale(1.05,1.05);
+    box-shadow: 2px 2px 5px black;
+}
+.content .content_ablum .photo_li figure figcaption{
+    background-color: red;
+}
+.content .content_ablum .photo_li img{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: inline-block;
 }
 
 /*内容模块底部工具栏*/
@@ -729,6 +739,7 @@ body{
         margin-right: 0;
         padding-left: 10px;
         padding-top: 10px;
+        padding-right: 0px;
     }
     .content .content_ablum .content_ablum_navi .ablum_lfet_line{
         display: none;
@@ -738,5 +749,6 @@ body{
         display: block;
         border-bottom: 1px dashed #cccccc;
         padding-bottom: 10px;
+        margin-right: 10px;
     }
 }
