--- a/css/index.css
+++ b/css/index.css
@@ -312,6 +312,7 @@ body{
     /*height: 7000px;*/
     overflow-y:auto;
     overflow-x: hidden;
+    /*display: none;*/
 }
 /*内容模块-右侧内容-相册模块*/
 .content .content_ablum{
@@ -383,7 +384,7 @@ body{
     margin-bottom: 10px;
 }
 .content .content_ablum .photo_li figure{
-    background-color: red;
+    background-color: white;
     /*display: inline-block;*/
     width: 100px;
     height: 100px;
@@ -396,7 +397,7 @@ body{
     box-shadow: 2px 2px 5px black;
 }
 .content .content_ablum .photo_li figure figcaption{
-    background-color: red;
+    background-color: white;
 }
 .content .content_ablum .photo_li img{
     width: 100%;
@@ -574,6 +575,7 @@ body{
     background-color: rgba(0,0,0,0.45);
     width: 100%;
     height: 45px;
+    line-height: 45px;
     text-align: center;
     line-height: 45px;
 }
